instruction state added and made some changes to difficulty level

--- a/birdGame/index.html
+++ b/birdGame/index.html
@@ -34,7 +34,7 @@
     <script src="Scripts/states/playerSelect.js"></script>
     <script src="Scripts/states/difficultyLevel.js"></script>
     <script src="Scripts/states/play.js"></script>
-
+    <script src="Scripts/states/instruction.js"></script>
     <script src="Scripts/game.js"></script>
 </body>
 </html>
